--- a/css/styles.css
+++ b/css/styles.css
@@ -226,3 +226,15 @@ a.custom-card:hover {
   border-radius: 3px;
   padding: 15px;
 }
+
+.cart-qty-input{
+  width: 75px;
+  border-radius: 4px;
+  border-color: #b3b3b3;
+}
+
+.cart-adress-input{
+  max-width: 100%;
+  border-radius: 4px;
+  border-color: #b3b3b3;
+}
