--- a/css/styles.css
+++ b/css/styles.css
@@ -235,6 +235,11 @@ a.custom-card:hover {
   padding: 15px;
 }
 
+.login-input{
+  max-width: 300px;
+  margin: 0 auto;
+}
+
 .cart-qty-input {
   width: 75px;
   border-radius: 4px;
@@ -242,7 +247,7 @@ a.custom-card:hover {
 }
 
 .medium-input {
-  max-width: 150%;
+  max-width: 100%;
   border-radius: 4px;
   border-color: #b3b3b3;
 }
@@ -274,4 +279,12 @@ a.custom-card:hover {
 
 .form{
   max-width: 50%;
+}
+
+.prof-img{
+  height: 100px;
+  border: solid;
+  border-color: rgb(182, 182, 182);
+  border-width: 2px;
+  border-radius: 3px;
 }
